--- a/NativeScriptJohnWayne/src/app/pizzas/pizzas.component.html
+++ b/NativeScriptJohnWayne/src/app/pizzas/pizzas.component.html
@@ -1,4 +1,11 @@
-<StackLayout orientation="horizontal">
-    <Label text="Hello World!" textWrap="true"></Label>
-    
+<StackLayout orientation="vertical">
+
+    <StackLayout orientation="horizontal">
+        <Label [text]="Hello World!" textWrap="true"></Label>
+        <label text="Com mola!"></label>
+    </StackLayout>
+
+    <label text="Em surt a baix"></label>
+    <button [text]="textButton" [class]="colorRed" (tap)="exempleClick()"></button>
+    <Image src="~/assets/legologo.png" stretch="fill"></Image>
 </StackLayout>
