#2 I've fixed routing problems

--- a/NativeScriptJohnWayne/src/app/pizzas/pizzas.component.html
+++ b/NativeScriptJohnWayne/src/app/pizzas/pizzas.component.html
@@ -1,4 +1,4 @@
-<StackLayout orientation="vertical">
+<!-- <StackLayout orientation="vertical">
 
     <StackLayout orientation="horizontal">
         <Label [text]="Hello World!" textWrap="true"></Label>
@@ -8,4 +8,4 @@
     <label text="Em surt a baix"></label>
     <button [text]="textButton" [class]="colorRed" (tap)="exempleClick()"></button>
     <Image src="~/assets/legologo.png" stretch="fill"></Image>
-</StackLayout>
+</StackLayout> -->
